--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,9 +1,60 @@
 /* work sans font from google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Merriweather:wght@400;900&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;500;700;800&display=swap');
 
+/* shared styles */
+
 * {
     font-family: 'Inter', sans-serif;
     font-family: 'Merriweather', serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+}
+
+.btn-primary{
+    
+}
+/* header styles */
+header{
+    background-color: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-tittle{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+
+}
+nav > ul {
+    display: flex;
+}
+nav li{
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500px;
+    font-size: 1rem;
+}
+nav li a{
+    text-decoration: none;
+    color: #424242;
+}
+
+/* banner styles */
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+.banner-tittle{
+    font-size: 4rem;
+    font-weight: 700;
+    color: #131313;
+}
+.banner-description{
+    color: #727272;
+
 }
