--- a/styles/architect.css
+++ b/styles/architect.css
@@ -9,6 +9,10 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-gray {
+    color: #727272;
+
+}
 
 .btn-primary {
     border-radius: 8px;
@@ -79,33 +83,10 @@ nav li a {
 }
 
 
-/* responsive media queries */
-/* mobile devices */
-@media screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
-}
-
-/* tablet or medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-    nav{
-        flex-direction: column;
-    }
-    header{
-        padding: 50px;
-    }
-    
-}
-
 /* main styles */
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 /* teams styles */
 .teams-container{
@@ -125,10 +106,42 @@ main{
     font-size: 2.8rem;
 }
 .teams-tittle .quick-list{
-    color: #727272;
     font-weight: 500;
 }
 .teams-tittle .text-features{
     color: #FF900E;
     font-weight: 700;
+}
+
+
+
+
+/* responsive media queries */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav, .teams-container{
+        flex-direction: column;
+    }
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    
+}
+
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    nav, .teams-container{
+        flex-direction: column;
+    }
+    header{
+        padding: 50px;
+    }
+    
 }
