--- a/styles/architect.css
+++ b/styles/architect.css
@@ -123,8 +123,39 @@ main {
     font-weight: 700;
 }
 
+/* feature section styles */
+.features {
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 40px;
+}
+
+.ten-years-badge h2{
+    font-size: 4rem;
+}
+.features .section-tittle {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
 /* facts section */
-.facts-card-container{
+.facts-card-container {
     display: flex;
     justify-content: space-around;
 }
@@ -135,31 +166,37 @@ main {
     text-align: center;
     padding: 30px;
 }
-.facts-card-container, .card-tittle{
+
+.facts-card-container,
+.card-tittle {
     font-weight: 600;
     font-size: 1.25rem;
     margin-top: 5px;
 
 }
-.facts-card-container, .card-states{
+
+.facts-card-container,
+.card-states {
     font-size: 2.8rem;
     color: #424242;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 /* sponsors styles */
-.sponsors{
+.sponsors {
     text-align: center;
 }
 
-.sponsors-img-container{
+.sponsors-img-container {
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
     gap: 40px;
     align-items: center;
 }
-.sponsors-img-container img{
+
+.sponsors-img-container img {
     width: 165px;
 }
 
@@ -172,7 +209,7 @@ main {
     }
 
     nav,
-    .sponsors-img-container, 
+    .sponsors-img-container,
     .facts-card-container,
     .teams-container {
         flex-direction: column;
@@ -182,11 +219,13 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content, .facts-card-container {
+    .teams-content,
+    .facts-card-container {
         padding-left: 20px;
         padding-right: 20px;
     }
-    .facts-card-container{
+
+    .facts-card-container {
         gap: 20px;
     }
 
