--- a/styles/architect.css
+++ b/styles/architect.css
@@ -144,10 +144,21 @@ main {
     color: #FFF;
     width: 342px;
     padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.feature-img img{
+    height: 80%;
+    margin-left: 90px;
 }
 
 .ten-years-badge h2{
     font-size: 4rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
 }
 .features .section-tittle {
     border-left: 5px solid #FF900E;
@@ -210,9 +221,19 @@ main {
 
     nav,
     .sponsors-img-container,
+    .features,
     .facts-card-container,
     .teams-container {
         flex-direction: column;
+    }
+
+    .feature-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
     }
 
     .teams-img-container {
@@ -236,6 +257,7 @@ main {
 @media screen and (min-width: 576px) and (max-width: 960px) {
 
     nav,
+    .features,
     .sponsors-img-container,
     .teams-container {
         flex-direction: column;
